syntax = "proto3";

package proto;

message User {
    string id = 1;
    string user_name = 2;
    string real_name = 3;
    string bio = 4;
    string avatar_url = 5;
    repeated User followings = 6;
    repeated User followers = 7;
}

message UserSearchResponse {
    repeated User user_list = 1;
}

message UserNameRequest {
    string user_name = 1;
}

message UserIdRequest {
    string user_id = 1;
}

message InstaPost {
    string id = 1;
    string post_id = 2;
    string img_url = 3;
    string caption = 4;
    repeated User tagged_users = 5;
    string short_code = 6;

}

message InstaPostsResponse {
    string user_id = 1;
    repeated InstaPost insta_posts = 2;
}

service UserSearchService {
    rpc GetAllUsersLikeUsername(UserNameRequest) returns (UserSearchResponse);
    rpc GetUserWithUsername(UserNameRequest) returns (User);
    rpc GetInstaPostsWithUserId(UserIdRequest) returns (InstaPostsResponse);

}
